--- a/package.json
+++ b/package.json
@@ -1,17 +1,24 @@
 {
   "name": "bps-dash",
+  "license": "MIT",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "proxy": "node cors-proxy/proxy"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.4.4",
+    "ccxt": "^1.19.16",
     "core-js": "^3.3.2",
+    "cors-anywhere": "^0.4.1",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
-    "vuex": "^3.0.1"
+    "vuetify": "^2.1.0",
+    "vuex": "^3.0.1",
+    "vuex-persist": "^2.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
@@ -25,6 +32,7 @@
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-vue": "^5.0.0",
     "prettier": "^1.18.2",
+    "vue-cli-plugin-vuetify": "^2.0.1",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
@@ -48,6 +56,7 @@
   },
   "browserslist": [
     "> 1%",
-    "last 2 versions"
+    "last 2 versions",
+    "not ie <= 10"
   ]
 }
