--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.4.4",
-    "ccxt": "^1.19.16",
-    "core-js": "^3.3.2",
+    "core-js": "^3.4.1",
     "cors-anywhere": "^0.4.1",
+    "request": "^2.88.0",
+    "request-promise-native": "^1.0.8",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
-    "vuetify": "^2.1.0",
-    "vuex": "^3.0.1",
+    "vuetify": "^2.1.10",
+    "vuex": "^3.1.2",
     "vuex-persist": "^2.1.1"
   },
   "devDependencies": {
@@ -31,8 +32,8 @@
     "eslint": "^5.16.0",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-vue": "^5.0.0",
-    "prettier": "^1.18.2",
-    "vue-cli-plugin-vuetify": "^2.0.1",
+    "prettier": "^1.19.1",
+    "vue-cli-plugin-vuetify": "^2.0.2",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
